--- a/static/styles/images.css
+++ b/static/styles/images.css
@@ -21,7 +21,7 @@ html, body{
 	height: 4rem;
 	position: relative;
 	z-index: 10;
-	
+
 	background-color: #ddd;
 	padding: 0em 0em 0.0em 0.5em;
 	box-shadow: 0px 0px 0.5em 0px #000;
@@ -31,10 +31,10 @@ html, body{
 	display: flex;
 	flex: 1;
 	height: 100%;
-	
+
 	align-items: center;
 	justify-content: space-around;
-}	
+}
 
 #file_uploader{
 	height: auto;
@@ -60,6 +60,46 @@ html, body{
 
 #controls{
 	display: none;
+}
+#imgCanvas{
+  display: block;
+  padding: 2em 1em;
+}
+
+#imageDownload{
+  cursor:pointer;
+  color:#ddd;
+  padding:0.5em;
+  display: block;
+  width: 10em;
+  background-color: #555;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
+  font-size: 0.8em;
+  width: 12em;
+  text-align: center;
+}
+
+#imageDownload:hover{
+  color: #fcc;
+  background-color: #777;
+}
+
+table.image-info{
+  border-collapse: collapse;
+  border: 1px solid black;
+  margin: 1em 0.1em;
+  min-width: 12em;
+}
+
+table.image-info tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+table.image-info td{
+  font-size: 0.9em;
+  padding: 0.5em 0.3em;
 }
 
 .container{
@@ -142,4 +182,3 @@ li.selected:hover {
 	border: 1px solid #222;
 	background-color: #fff;
 }
-
